--- a/src/views/Base/Sheep/package.json
+++ b/src/views/Base/Sheep/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Cards",
+  "name": "Sheep",
   "version": "0.0.0",
   "private": true,
-  "main": "./Cards.js"
+  "main": "./Sheep.js"
 }
